--- a/data/resources/views.ui
+++ b/data/resources/views.ui
@@ -1,84 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <!-- interface-requires gtk+ 3.6 -->
-  <object class="GtkListBoxRow" id="item-row">
-    <property name="can_focus">False</property>
+  <template class="Gjs_View" parent="GtkStack">
     <property name="visible">True</property>
+
     <child>
-      <object class="GtkGrid" id="grid1">
+      <object class="GtkScrolledWindow">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
-        <property name="hexpand">True</property>
-        <property name="margin_top">0</property>
-        <property name="margin_bottom">0</property>
-        <property name="margin_left">4</property>
-        <property name="margin_right">4</property>
+        <property name="hscrollbar-policy">GTK_POLICY_NEVER</property>
+
+
         <child>
-          <object class="GtkImage" id="row-image">
-            <property name="width_request">95</property>
-            <property name="height_request">80</property>
+          <object class="GtkListBox" id="listBox">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="halign">center</property>
-            <property name="valign">start</property>
-            <property name="margin_top">0</property>
-            <property name="margin_bottom">0</property>
-            <property name="margin_start">8</property>
-            <property name="margin_end">8</property>
           </object>
-          <packing>
-            <property name="left_attach">0</property>
-            <property name="top_attach">0</property>
-            <property name="width">1</property>
-            <property name="height">5</property>
-          </packing>
         </child>
-        <child>
-          <object class="GtkBox" id="box1">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="hexpand">True</property>
-            <property name="baseline_position">top</property>
-            <child>
-              <object class="GtkLabel" id="row-title">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="valign">baseline</property>
-                <attributes>
-                  <attribute name="weight" value="bold"/>
-                </attributes>
-              </object>
-            </child>
-          </object>
-          <packing>
-            <property name="left_attach">1</property>
-            <property name="top_attach">0</property>
-            <property name="width">1</property>
-            <property name="height">1</property>
-          </packing>
-        </child>
-        <child>
-          <object class="GtkLabel" id="row-excerpt">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="halign">start</property>
-            <property name="valign">start</property>
-            <property name="xalign">0</property>
-            <property name="yalign">0</property>
-            <property name="label" translatable="no">Message</property>
-            <property name="wrap">True</property>
-            <style>
-              <class name="dim-label"/>
-            </style>
-          </object>
-          <packing>
-            <property name="left_attach">1</property>
-            <property name="top_attach">1</property>
-            <property name="width">1</property>
-            <property name="height">1</property>
-          </packing>
-        </child>  
       </object>
     </child>
-  </object>
+  </template>
 </interface>
