--- a/data/resources/window.ui
+++ b/data/resources/window.ui
@@ -36,6 +36,30 @@
           </packing>
         </child>
 
+        <child>
+          <object class="GtkButton" id="refreshButton">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="valign">center</property>
+            <property name="sensitive">True</property>
+            <style>
+              <class name="image-button" />
+            </style>
+
+            <child>
+              <object class="GtkImage">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="icon-name">view-refresh-symbolic</property>
+                <property name="icon-size">1</property>
+              </object>
+            </child>
+          </object>
+          <packing>
+            <property name="pack_type">start</property>
+          </packing>
+        </child>
+
         <child type="title">
           <object class="GtkStack" id="titleBar">
             <property name="visible">True</property>
